--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ blah, blah, blah, blah
       <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
       <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
       
-      <!-- the following link sets the icon image that will be placed on the phone home screen
+      <!-- the following link sets the icon image that will be placed on the phone home screen if the user makes a shortcut.
       <link rel="apple-touch-icon" href="/custom_icon.png">
 
 	-->
