Small changes to header text and new link to DIY website

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ Author 1
 Author 2
  
 Further Information:
-http://cns.utexas.edu/fri
- 
+http://diystream.cns.utexas.edu/
+
 Research Educator:
 Timothy Riedel
 triedel@utexas.edu
@@ -31,9 +31,8 @@ blah, blah, blah, blah
       <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
       <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
       
-      <!-- the following link sets the icon image that will be placed on the phone home screen if the user makes a shortcut.
+      <!-- the following link sets the icon image that will be placed on a device home screen if the user makes a shortcut.
       <link rel="apple-touch-icon" href="/custom_icon.png">
-
 	-->
       
       <script>
