Fixed the footer to bottom of page

--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@ blah, blah, blah, blah
 		</div><!-- /header -->
 
 		<div role="main" class="ui-content">
-			<p>This is a paragraph in the main/content section.</p>
+			<p>This is a paragraph in the main/content section of Page 1.</p>
 			<a href="#page2" class="ui-btn">Button to Page 2</a>
 		</div><!-- /content -->
 
-		<div data-role="footer">
+		<div data-role="footer" data-position="fixed">
 			<h4>Page 1 Footer</h4>
 		</div><!-- /footer -->
 	</div><!-- /page 1 -->
@@ -83,10 +83,11 @@ blah, blah, blah, blah
 		</div><!-- /header -->
 
 		<div role="main" class="ui-content">
+			<p>This is a paragraph in the main/content section of Page 2.</p>
 			<p><a href="#page1" class="ui-btn">Back to Page 1</a></p>
 		</div><!-- /content -->
 
-		<div data-role="footer">
+		<div data-role="footer" data-position="fixed">
 			<h4>Page 2 Footer</h4>
 		</div><!-- /footer -->
 	</div><!-- /page 2-->
