--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ blah, blah, blah, blah
 
 		<div role="main" class="ui-content">
 			<p>This is a paragraph in the main/content section of Page 2.</p>
-			<p><a href="#page1" class="ui-btn">Back to Page 1</a></p>
+			<p><a href="#page1" class="ui-btn">Button Back to Page 1</a></p>
 		</div><!-- /content -->
 
 		<div data-role="footer" data-position="fixed">
