--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Does not provide proper medical evaluation. Does not account for other possible 
 
 <!-- for mobile device viewing -->	
    <head> 
-      <title>Cold-or-Allergy</title>  
+      <title>Stroke</title>  
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="apple-mobile-web-app-capable" content="yes">
       <link rel="stylesheet" href="w3.css">
@@ -112,7 +112,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 <!-- first page begins -->
 <body>
-<div id="header" class="w3-container w3-flat-carrot">
+<div id="header" class="w3-container w3-flat-wisteria">
 		<!-- targets page and tells browser to display -->
 	<h1>Are you experiencing a stroke?</h1>
 		<!--text gets displayed in colored header at top of page -->
@@ -123,7 +123,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	<p>For all the following questions, please answer as if you are the person experiencing the symptoms, regardless of if you are answering for someone else</p>
 	
-	<a href="#one" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange"> Get Started! </a>
+	<a href="#one" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate"> Get Started! </a>
 
 		<!--All buttons changed from source code to be dark grey with rounded edges. They change to orange when hovered over -->
 	
@@ -139,7 +139,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 <div class="page" id="one">
 		<!-- id assigns this new page a "name" so that it can be targeted later if necessary. for instance, if we needed to link back to this first question, we could do so using it's id "one" -->
-	<div id="header" class="w3-container w3-flat-carrot">
+	<div id="header" class="w3-container w3-flat-wisteria">
 		<h1>Question 1</h1>
 	</div>
 	
@@ -147,8 +147,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
         <p>Are you experiencing a severe headache?</p>
 		<!-- first question -->
 		
-		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Yes</a>
-		<a href="#two"  onclick="noAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">No</a>
+		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Yes</a>
+		<a href="#two"  onclick="noAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">No</a>
 			
 		<!--a href links will either add 1 value to the stroke function upon clicking or not, and redirect user to next question/page depending on which is clicked -->
 		<!-- new page redirection is done by targeting next page using it's div id -->
@@ -159,7 +159,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 
 	
 <!-- footer display on results page -->
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>	
 	
@@ -167,20 +167,20 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	
 <div class="page" id="two">
-	<div class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-wisteria">
 		<h1>Question 2</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
 	<p>Have you developed sudden numbness or weakness in your arm or leg, even if only on one side?</p>
 		
-		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Yes</a>
-		<a href="#three"  onclick="noAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">No</a>
+		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Yes</a>
+		<a href="#three"  onclick="noAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">No</a>
 	</div>
 </div>	
 	
 
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>
 	
@@ -188,20 +188,20 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	
 <div class="page" id="three">
-	<div class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-wisteria">
 		<h1>Question 3</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
 	<p>Are you having trouble communicating (this includes confusion, slurried speech, difficultity understanding others)?</p>
 		
-		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Yes</a>
-		<a href="#four"  onclick="noAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">No</a>
+		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Yes</a>
+		<a href="#four"  onclick="noAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">No</a>
 	</div>
 </div>	
 
 	
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>	
 	
@@ -209,19 +209,19 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	
 <div class="page" id="four">
-	<div class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-wisteria">
 		<h1>Question 4</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
 		<p>Are you having trouble balancing, staying upright, and/or experiencing dizziness?</p>
 		
-		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Yes</a>
-		<a href="#five"  onclick="noAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">No</a>
+		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Yes</a>
+		<a href="#five"  onclick="noAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">No</a>
 	</div>
 	
 	
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>
 	
@@ -233,19 +233,19 @@ When ran, it will divide the number of allergy_count responses by the total numb
 </div>	
 
 	<div class="page" id="five">
-	<div class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-wisteria">
 		<h1>Question 5</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
 		<p>Are you having difficulty seeing? This includes blurry or darkened vision from either or both eyes.</p>
-		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Yes</a>
-		<a href="#six"  onclick="noAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">No</a>
+		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Yes</a>
+		<a href="#six"  onclick="noAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">No</a>
 	</div>
 </div>	
 	
 
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>
 	
@@ -256,19 +256,19 @@ When ran, it will divide the number of allergy_count responses by the total numb
 </div>	
 
 	<div class="page" id="six">
-	<div class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-wisteria">
 		<h1>Question 6</h1>
 	</div>
 	
 	<div id="content" class="w3-container">
 		<p>Is one side of your face drooping?</p>
-		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Yes</a>
-		<a href="#results"  onclick="noAdd();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">No</a>
+		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Yes</a>
+		<a href="#results"  onclick="noAdd();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">No</a>
 	</div>
 </div>	
 	
 	
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>
 	
@@ -279,7 +279,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	
 <div class="page" id="results">
-	<div class="w3-container w3-flat-carrot">
+	<div class="w3-container w3-flat-wisteria">
 		<h1>Almost there!</h1>
 	</div>
 	
@@ -289,7 +289,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 
 	<div id="content" class="w3-container">
 		
-	<a onclick="getResults();" class="w3-btn w3-dark-grey w3-round-large w3-hover-orange">Click here to get your results</a>
+	<a onclick="getResults();" class="w3-btn w3-asbestos w3-round-large w3-hover-pomegranate">Click here to get your results</a>
 		<!--final results should be hidden until button is clicked, then results should pop up -->
 	
 	<p id="percentages"></p>
@@ -300,7 +300,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 
 	
 	
-<footer class="w3-bottom w3-container w3-flat-carrot">
+<footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
 </footer>
 	<!-- note for future: why is there a small white/blank space in the far left area of all the footers except for the final page and question 4? (not yet sure about question 6, that update is within the commit currently being written) -->
