--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	<p>For all the following questions, please answer as if you are the person experiencing the symptoms, regardless of if you are answering for someone else</p>
 	
-	<a href="#one" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate"> Get Started! </a>
+	<a href="#one" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson"> Get Started! </a>
 
 		<!--All buttons changed from source code to be dark grey with rounded edges. They change to orange when hovered over -->
 	
@@ -147,8 +147,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
         <p>Are you experiencing a severe headache?</p>
 		<!-- first question -->
 		
-		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Yes</a>
-		<a href="#two"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">No</a>
+		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Yes</a>
+		<a href="#two"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">No</a>
 			
 		<!--a href links will either add 1 value to the stroke function upon clicking or not, and redirect user to next question/page depending on which is clicked -->
 		<!-- new page redirection is done by targeting next page using it's div id -->
@@ -174,8 +174,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	<div id="content" class="w3-container">
 	<p>Have you developed sudden numbness or weakness in your arm or leg, even if only on one side?</p>
 		
-		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Yes</a>
-		<a href="#three"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">No</a>
+		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Yes</a>
+		<a href="#three"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">No</a>
 	</div>
 </div>	
 	
@@ -195,8 +195,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	<div id="content" class="w3-container">
 	<p>Are you having trouble communicating (this includes confusion, slurried speech, difficultity understanding others)?</p>
 		
-		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Yes</a>
-		<a href="#four"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">No</a>
+		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Yes</a>
+		<a href="#four"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">No</a>
 	</div>
 </div>	
 
@@ -216,8 +216,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	<div id="content" class="w3-container">
 		<p>Are you having trouble balancing, staying upright, and/or experiencing dizziness?</p>
 		
-		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Yes</a>
-		<a href="#five"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">No</a>
+		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Yes</a>
+		<a href="#five"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">No</a>
 	</div>
 	
 	
@@ -239,8 +239,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	<div id="content" class="w3-container">
 		<p>Are you having difficulty seeing? This includes blurry or darkened vision from either or both eyes.</p>
-		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Yes</a>
-		<a href="#six"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">No</a>
+		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Yes</a>
+		<a href="#six"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">No</a>
 	</div>
 </div>	
 	
@@ -262,8 +262,8 @@ When ran, it will divide the number of allergy_count responses by the total numb
 	
 	<div id="content" class="w3-container">
 		<p>Is one side of your face drooping?</p>
-		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Yes</a>
-		<a href="#results"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">No</a>
+		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Yes</a>
+		<a href="#results"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">No</a>
 	</div>
 </div>	
 	
@@ -289,7 +289,7 @@ When ran, it will divide the number of allergy_count responses by the total numb
 
 	<div id="content" class="w3-container">
 		
-	<a onclick="getResults();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-flat-pomegranate">Click here to get your results</a>
+	<a onclick="getResults();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-crimson">Click here to get your results</a>
 		<!--final results should be hidden until button is clicked, then results should pop up -->
 	
 	<p id="percentages"></p>
