--- a/index.html
+++ b/index.html
@@ -139,19 +139,23 @@ img, object allows for images to be resized according to the screen display
 	
 	<p>For all the following questions, please answer as if you are the person experiencing the symptoms, regardless of if you are answering for someone else</p>
 	
-	<a href="#one" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399"> Get Started! </a>
+	<a href="#one" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet"> Get Started! </a>
 
+	<br>
 	
 	<img src="https://www.neuroskills.com/images/grapic-FASTstroke.jpg" alt="befast stroke graphic">
 	
 	
 		<!--All buttons changed from source code to be dark grey with rounded edges. They change to orange when hovered over -->
 	
-	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at 		Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code 			does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
+	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
+	
+	<br>
  	
 	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
 		<!--disclaimers -->
 
+</div>
 	
 	
 	
@@ -167,8 +171,8 @@ img, object allows for images to be resized according to the screen display
         <p>Are you experiencing a severe headache?</p>
 		<!-- first question -->
 		
-		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Yes</a>
-		<a href="#two"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">No</a>
+		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
+		<a href="#two"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
 			
 		<!--a href links will either add 1 value to the stroke function upon clicking or not, and redirect user to next question/page depending on which is clicked -->
 		<!-- new page redirection is done by targeting next page using it's div id -->
@@ -194,8 +198,8 @@ img, object allows for images to be resized according to the screen display
 	<div id="content" class="w3-container">
 	<p>Have you developed sudden numbness or weakness in your arm or leg, even if only on one side?</p>
 		
-		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Yes</a>
-		<a href="#three"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">No</a>
+		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
+		<a href="#three"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
 	</div>
 </div>	
 	
@@ -215,8 +219,8 @@ img, object allows for images to be resized according to the screen display
 	<div id="content" class="w3-container">
 	<p>Are you having trouble communicating (this includes confusion, slurried speech, difficultity understanding others)?</p>
 		
-		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Yes</a>
-		<a href="#four"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">No</a>
+		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
+		<a href="#four"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
 	</div>
 </div>	
 
@@ -236,8 +240,8 @@ img, object allows for images to be resized according to the screen display
 	<div id="content" class="w3-container">
 		<p>Are you having trouble balancing, staying upright, and/or experiencing dizziness?</p>
 		
-		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Yes</a>
-		<a href="#five"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">No</a>
+		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
+		<a href="#five"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
 	</div>
 	
 	
@@ -259,8 +263,8 @@ img, object allows for images to be resized according to the screen display
 	
 	<div id="content" class="w3-container">
 		<p>Are you having difficulty seeing? This includes blurry or darkened vision from either or both eyes.</p>
-		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Yes</a>
-		<a href="#six"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">No</a>
+		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
+		<a href="#six"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
 	</div>
 </div>	
 	
@@ -282,8 +286,8 @@ img, object allows for images to be resized according to the screen display
 	
 	<div id="content" class="w3-container">
 		<p>Is one side of your face drooping?</p>
-		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Yes</a>
-		<a href="#results"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">No</a>
+		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
+		<a href="#results"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
 	</div>
 </div>	
 	
@@ -303,16 +307,16 @@ img, object allows for images to be resized according to the screen display
 		<h1>Almost there!</h1>
 	</div>
 	
-	<p> </p>
-			<!-- paragraph tags to improve spacing with button; it presses right up against the border; ideally this will create a slight buffer to make it more visually streamlined/appealing -->
-			<!-- note to self for future: find way to do this without having to just put in a blank paragraph tag -->
+	<br>
 
 	<div id="content" class="w3-container">
 		
-	<a onclick="getResults();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-#663399">Click here to get your results</a>
+	<a onclick="getResults();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Click here to get your results</a>
 		<!--final results should be hidden until button is clicked, then results should pop up -->
 	
 	<p id="percentages"></p>
+		
+	<img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/3575-Stroke_face_arms_mouth_clock_time-1296x2040-Graphic-V1.jpg?w=1155&h=4284" alt="actfast stroke graphic">
 	
 	</div>
 	
