--- a/index.html
+++ b/index.html
@@ -65,14 +65,16 @@ Does not provide proper medical evaluation. Does not account for other possible 
             no_count = no_count + 1;
         }
 	//for adding values when an answer that might indicate experiencing a stroke is clicked
+	//noAdd function only for results calculation purposes; results will not be displayed
 	
 
 /*Results page forumla. Diplays survey results by percentage
-When ran, it will divide the number of allergy_count responses by the total number of questions and multiply it by 100 to achieve a percentage value to be displayed */
+When ran, it will divide the number of stroke_count responses by the total number of questions and multiply it by 100 to achieve a percentage value to be displayed */
         
 	function getResults(){
 		var strokePercent = 100 * (stroke_count/(stroke_count + no_count));
 		var finalResults = document.getElementById("percentages")
+			//only results for stroke possiblity will be displayed, since it would be redundant to have another line saying "chance it's not" along with "chance it is"
 		   
 		.innerHTML = "Probability you are experiencing a stroke =" + strokePercent + "%"; 
 			//added "%" after percent display so it's not just the numbers
@@ -139,14 +141,16 @@ img, object allows for images to be resized according to the screen display
 	
 	<p>For all the following questions, please answer as if you are the person experiencing the symptoms, regardless of if you are answering for someone else</p>
 	
+	<!-- basic stroke info and instructions on how to take the diagnostic quiz above -->
+	
 	<a href="#one" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet"> Get Started! </a>
+		<!--All buttons start dark grey color, change to blue-violet when hovered over -->
 
 	<br>
 	
 	<img src="https://www.neuroskills.com/images/grapic-FASTstroke.jpg" alt="befast stroke graphic">
+		<!--infographic showing acronym for how to identify a stroke -->
 	
-	
-		<!--All buttons changed from source code to be dark grey with rounded edges. They change to orange when hovered over -->
 	
 	<p>The following code has been developed by students and/or researchers of the Freshman Research Initiative DIY Diagnostics Stream at The University of Texas at Austin.  This code is shared for demonstration purposes and should not be considered a product -- it is for entertainment purposes only. Any user of this code does so at their own risk. Members of the DIY Stream, FRI, and The University of Texas system are not liable for anything related to this code.</p>
 	
@@ -182,9 +186,10 @@ img, object allows for images to be resized according to the screen display
 </div>
 
 	
-<!-- footer display on results page -->
+<!-- footer display on bottom of all question pages and on results page; includes warning and reminder to call 911 when in doubt; same color as headers -->
 <footer class="w3-bottom w3-container w3-flat-wisteria">
 	<p>When in doubt, contact emergency services immediately. Strokes are life-threatening and require urgent medical attention.</p>
+
 </footer>	
 	
 	
@@ -317,7 +322,8 @@ img, object allows for images to be resized according to the screen display
 	<p id="percentages"></p>
 		
 	<img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/3575-Stroke_face_arms_mouth_clock_time-1296x2040-Graphic-V1.jpg?w=1155&h=4284" alt="actfast stroke graphic">
-	
+		<!-- additional infographic for identifying a stroke -->
+		
 	</div>
 	
 <!-- above button should display percantage results upon being clicked -->
