--- a/index.html
+++ b/index.html
@@ -39,9 +39,11 @@ Does not provide proper medical evaluation. Does not account for other possible 
 	
 	// The following code lets you know when the file was last modified.
 	// This will help you know if you are looking at the new version of the file or if there is a delay on GitHub.
-     	  var docMod = document.lastModified;
+	
+     	  /* var docMod = document.lastModified;
      	  alert("This file last modified  " + docMod);
-     	  console.log("This file last modified  " + docMod);
+     	  console.log("This file last modified  " + docMod); */
+	
 	// If you find the alert box annoying, comment out that line and timestamp will still show up in the debugging console
 
 	
@@ -139,14 +141,14 @@ img, object allows for images to be resized according to the screen display
 <div id="content" class="w3-container">
 	<p>Strokes are a result of interrupted blood supply to the brain, and are considered a serious medical emergency. When in doubt, contact your local emergency services immediately.</p>
 	
-	<p>For all the following questions, please answer as if you are the person experiencing the symptoms, regardless of if you are answering for someone else</p>
+	<p>For all the following questions, please answer as if you are the person experiencing the symptoms, regardless of if you are answering for someone else.</p>
 	
 	<!-- basic stroke info and instructions on how to take the diagnostic quiz above -->
 	
 	<a href="#one" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet"> Get Started! </a>
 		<!--All buttons start dark grey color, change to blue-violet when hovered over -->
 
-	<br>
+	<br><br><br>
 	
 	<img src="https://www.neuroskills.com/images/grapic-FASTstroke.jpg" alt="befast stroke graphic">
 		<!--infographic showing acronym for how to identify a stroke -->
@@ -156,8 +158,9 @@ img, object allows for images to be resized according to the screen display
 	
 	<br>
  	
-	<p>THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.</p>
+	<p> THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION. </p>
 		<!--disclaimers -->
+		<!-- <br> line breaks help with formatting -->
 
 </div>
 	
@@ -175,8 +178,8 @@ img, object allows for images to be resized according to the screen display
         <p>Are you experiencing a severe headache?</p>
 		<!-- first question -->
 		
-		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
-		<a href="#two"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
+		<a href="#two"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large">Yes</a>
+		<a href="#two"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large">No</a>
 			
 		<!--a href links will either add 1 value to the stroke function upon clicking or not, and redirect user to next question/page depending on which is clicked -->
 		<!-- new page redirection is done by targeting next page using it's div id -->
@@ -203,8 +206,8 @@ img, object allows for images to be resized according to the screen display
 	<div id="content" class="w3-container">
 	<p>Have you developed sudden numbness or weakness in your arm or leg, even if only on one side?</p>
 		
-		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
-		<a href="#three"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
+		<a href="#three"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large">Yes</a>
+		<a href="#three"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large">No</a>
 	</div>
 </div>	
 	
@@ -224,8 +227,8 @@ img, object allows for images to be resized according to the screen display
 	<div id="content" class="w3-container">
 	<p>Are you having trouble communicating (this includes confusion, slurried speech, difficultity understanding others)?</p>
 		
-		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
-		<a href="#four"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
+		<a href="#four"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large">Yes</a>
+		<a href="#four"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large">No</a>
 	</div>
 </div>	
 
@@ -245,8 +248,8 @@ img, object allows for images to be resized according to the screen display
 	<div id="content" class="w3-container">
 		<p>Are you having trouble balancing, staying upright, and/or experiencing dizziness?</p>
 		
-		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
-		<a href="#five"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
+		<a href="#five"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large">Yes</a>
+		<a href="#five"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large">No</a>
 	</div>
 	
 	
@@ -268,8 +271,8 @@ img, object allows for images to be resized according to the screen display
 	
 	<div id="content" class="w3-container">
 		<p>Are you having difficulty seeing? This includes blurry or darkened vision from either or both eyes.</p>
-		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
-		<a href="#six"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
+		<a href="#six"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large">Yes</a>
+		<a href="#six"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large">No</a>
 	</div>
 </div>	
 	
@@ -291,8 +294,8 @@ img, object allows for images to be resized according to the screen display
 	
 	<div id="content" class="w3-container">
 		<p>Is one side of your face drooping?</p>
-		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Yes</a>
-		<a href="#results"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">No</a>
+		<a href="#results"  onclick="strokeAdd();" class="w3-btn w3-flat-asbestos w3-round-large">Yes</a>
+		<a href="#results"  onclick="noAdd();" class="w3-btn w3-flat-asbestos w3-round-large">No</a>
 	</div>
 </div>	
 	
@@ -316,10 +319,12 @@ img, object allows for images to be resized according to the screen display
 
 	<div id="content" class="w3-container">
 		
-	<a onclick="getResults();" class="w3-btn w3-flat-asbestos w3-round-large w3-hover-blueviolet">Click here to get your results</a>
+	<a onclick="getResults();" class="w3-btn w3-flat-asbestos w3-round-large">Click here to get your results</a>
 		<!--final results should be hidden until button is clicked, then results should pop up -->
 	
 	<p id="percentages"></p>
+		
+	<br>
 		
 	<img src="https://i0.wp.com/images-prod.healthline.com/hlcmsresource/images/3575-Stroke_face_arms_mouth_clock_time-1296x2040-Graphic-V1.jpg?w=1155&h=4284" alt="actfast stroke graphic">
 		<!-- additional infographic for identifying a stroke -->
